# phash-rs

./: .Cargo.toml.swp  .gitignore  Cargo.toml  build.rs
pHash/: CMakeLists.txt
pHash/bindings/java/: build.xml
pHash/examples/: test_imagephash.cpp  test_mhimagehash.cpp
pHash/phash-win32/: pHash.sln  pHash.vcproj
pHash/phash-win32/examples/: build_mvptree_audio.cpp  testimagehash.sln  testimagehash.vcproj
pHash/phash-win32/src/: cimgffmpeg.cpp  cimgffmpeg.h  mman.cpp  mman.h  pHash.h  pHash.sln  pHash.vcproj  ph_fft.h  phcomplex.h
pHash/src/: cimgffmpeg.h  pHash_c.cpp
src/: lib.rs  phash.rs
