[package]
name = "phash"
version = "0.1.0"
edition = "2021"
description = "Perceptual hashing"
homepage = "https://github.com/fiam/phash-rs"
repository = "https://github.com/fiam/phash-rs"
license = "MIT"
categories = ["multimedia::images"]
keywords = ["graphics", "image", "hash"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"

[build-dependencies]
cmake = "0.1"
